--- a/frontend/app/src/App.scss
+++ b/frontend/app/src/App.scss
@@ -95,8 +95,9 @@ form {
 .ticket form {
   display: flex;
   flex-direction: row;
-  justify-content: center;
+  justify-content: space-around;
   align-items: center;
+  // background-color: lightblue;
 }
 
 .CustomerProfile {
@@ -278,12 +279,13 @@ form {
 .ticket {
   width: 85vw;
   height: 25vh;
-  background: #ffffff;
+  background: white;
   box-shadow: 0px 10px 25px rgba(0, 0, 0, 0.15);
   border-radius: 38px;
   width: auto;
   display: flex;
   align-items: center;
+  justify-content: center;
 }
 .from,
 .to {
@@ -296,16 +298,12 @@ form {
   flex-direction: column;
   align-items: flex-start;
   justify-content: center;
+  margin: 0px 40px;
+  padding: 5px;
 }
 
 .to {
   align-items: flex-end;
-}
-.from p,
-.to p {
-  margin-left: 40px;
-  margin-right: 40px;
-  line-height: 0px;
 }
 
 .caption {
